idf_component_register(
	SRCS 
		Alphabet.cpp
		Animation.cpp
		AnimationProgram.cpp
		AnimationTask.cpp
		BitmapAnimation.cpp
		CandyChaser.cpp
		Chaser.cpp
		DiceAnimation.cpp
		Display.cpp
		EmojiAnimation.cpp
		Felix.cpp
		Funbit64.cpp
		Gravity.cpp
		HeartAnimation.cpp
		JsonAnimation.cpp
		Kaleidascope.cpp
		MarqueeAniumation.cpp
		MeteorShowerAnimation.cpp
		MiscellanyAnimation.cpp
		PaintPixel.cpp
		Party.cpp
		PathAnimation.cpp
		Plasma.cpp
		Profiler.cpp
		RainbowChaser.cpp
		SmearAnimation.cpp
		SpinBottle2.cpp
		SpinBottleAnimation.cpp
		SpiralAnimation.cpp
		Timer.cpp
		TimerAnimationTask.cpp
		Tween.cpp
		Weather.cpp
		WormholeAnimation.cpp

	INCLUDE_DIRS inc inc/animations
    REQUIRES
    	matrix
    	json
		motion
)
